# AutoDrive-Hardware-Instructions

./: README.md  ~$导航设备和雷达操作指南.docx  定位设备尺寸.docx  组合导航设备和雷达操作指南.docx  组合导航设备和雷达操作指南2.docx
beiyun_navigation/src/ins_pub/lib/: libnavislam.so.1.0.0
beiyun_navigation/北云/BY_Connect/: BY_Connect.ini  BY_Connect.ini.backup
beiyun_navigation/北云/By_Convert/: BY_Convert.trace  by_convert.ini  版本说明.txt
beiyun_x1-5h/src/ins_pub/: CMakeLists.txt
daoyuan_navigation/src/: CMakeLists.txt  README.md  package.xml
daoyuan_navigation/src/ZCANBusSocket/: CANBase.h  CANHandler.cpp  CANHandler.h  CANSocket.cpp  CANSocket.h  CANType.h  CMakeLists.txt  FindSocket.cmake
daoyuan_navigation/src/collect_node/: customitem.cpp  customitem.h  interactivegraphicsview.cpp  interactivegraphicsview.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pointshowdialog.cpp  pointshowdialog.h  pointshowdialog.ui
daoyuan_navigation/src/include/: LoopThread.h
daoyuan_navigation/src/pos_dy_node/: GaussProjection.cpp  GaussProjection.h  main.cpp
daoyuan_navigation/导远/1.【测试软件】INS Assistant.exe/: INS Assistant V1.22.msi
daoyuan_navigation/导远/5. 【数据解析工具】解包程序（MATLAB脚本）（20210402CSV注解版）/: Example.mat  RunMain.p  main.m  使用方法（导出CSV）.txt
xian_navigation/ins_pub/: 2023-02-09-21-00-51.bag  2023-02-10-11-20-09.bag  2023-02-10-11-49-24.bag  2023-02-10-12-07-04.bag
xian_navigation/ins_pub/0211_youyi/: 2023-02-11-17-37-46.bag  2023-02-11-17-45-31.bag
xian_navigation/ins_pub/src/: CMakeLists.txt  package.xml
xian_navigation/西安操作指南/上位机/: AEREO  PUF  SKY  config  geo.mth  安装说明.txt  环境配置32位.bat
(+42 files in other folders)
