<?xml version="1.0"?>
<package format="2">
  <name>iau_ros_location</name>
  <version>0.1.0</version>
  <description>The iau_ros_location package</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>All rights reserved.</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>iau_ros_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>iau_ros_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>iau_ros_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
